--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.0' # Matches your environment or common stable
+          flutter-version: '3.27.0' # Support for video_player >=2.10.0
           channel: 'stable'
 
       - name: Install dependencies
