--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   youtube_player_flutter: ^9.1.2
 dependency_overrides:
   collection: 1.18.0
+  path: 1.9.0
   google_api_headers: 4.3.1
   phonepe_payment_sdk: ^3.0.1
   badges: ^3.1.2
