--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install CocoaPods
         run: |
           cd ios
+          # Force iOS 13.0 deployment target in Podfile
+          sed -i '' "s/platform :ios, '12.0'/platform :ios, '13.0'/g" Podfile || true
+          sed -i '' "s/# platform :ios, '12.0'/platform :ios, '13.0'/g" Podfile || true
           pod install
           cd ..
 
