--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -26,10 +26,26 @@ jobs:
       - name: Install CocoaPods
         run: |
           cd ios
-          # Force iOS 15.0 deployment target in Podfile
-          sed -i '' "s/platform :ios, '12.0'/platform :ios, '15.0'/g" Podfile || true
-          sed -i '' "s/platform :ios, '13.0'/platform :ios, '15.0'/g" Podfile || true
-          sed -i '' "s/# platform :ios, '12.0'/platform :ios, '15.0'/g" Podfile || true
+          # Clean existing pods and lock file for a fresh start
+          rm -rf Pods
+          rm -rf Podfile.lock
+          # Create/Update Podfile with iOS 15.0 and static linkage fix
+          if [ ! -f Podfile ]; then
+            echo "platform :ios, '15.0'" > Podfile
+            echo "use_frameworks!" >> Podfile
+          else
+            sed -i '' "s/platform :ios, .*/platform :ios, '15.0'/g" Podfile
+          fi
+          # Fix for PhoneNumberKit / libphonenumber_plugin
+          echo "post_install do |installer|
+            installer.pods_project.targets.each do |target|
+              flutter_additional_ios_build_settings(target)
+              target.build_configurations.each do |config|
+                config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+                config.build_settings['SWIFT_VERSION'] = '5.0'
+              end
+            end
+          end" >> Podfile
           pod install
           cd ..
 
