--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,7 @@ dependency_overrides:
   http: ^1.2.2
   intl: ^0.19.0
   image_picker: ^1.1.2
-  intl_phone_number_input: ^0.7.5+1
+  intl_phone_number_input: ^0.7.5
   json_annotation: ^4.1.0
   logging: ^1.0.2
   one_context: ^4.0.0
