--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
 dependency_overrides:
   collection: 1.18.0
   path: 1.9.0
+  http_parser: 4.0.0
   google_api_headers: 4.3.1
   phonepe_payment_sdk: ^3.0.1
   badges: ^3.1.2
