--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -46,6 +46,12 @@ jobs:
           cd build/ios/iphoneos
           zip -r ZahyaStore_iOS.ipa Payload
           cd ../../..
+          
+          # Prepare Zip for Simulator (Appetize.io)
+          # We zip the Runner.app folder itself to preserve the .app structure
+          cd build/ios/iphonesimulator
+          zip -r ../../../ios_simulator_app.zip Runner.app
+          cd ../../..
 
       - name: Upload iOS IPA (Physical)
         uses: actions/upload-artifact@v4
@@ -57,4 +63,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ios-simulator-build
-          path: build/ios/iphonesimulator/Runner.app
+          path: ios_simulator_app.zip
